--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
@@ -69,7 +70,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "@expo/vector-icons": "*"
   },
   "jest": {
     "preset": "react-native",
@@ -143,5 +145,8 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "expo-font": "9.2.1"
   }
 }
